--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-Hello
+<html>
+<head>
+	<title> erin bruns</title>
+	<link href="style.css" rel="stylesheet" type="text/css">
+	<script src="https://kit.fontawesome.com/a076d05399.js"></script>
+</head>
+
+<body> 
+
+	<nav> 
+		<ul class="main-nav">
+			<li class="active"><a href=""> projects </a></li>
+			<li><a href=""> about </a></li>
+			<li><a href=""> play </a></li>
+		</ul>
+	</nav>	
+
+	<div class="column">
+		<img class="airbnb" src="airbnbmac.png">
+		<img class="flat" src="fpiphone.png">
+	</div>
+
+</body>
+</html>
