--- a/index.html
+++ b/index.html
@@ -7,18 +7,16 @@
 
 <body> 
 
-	<nav> 
-		<ul class="main-nav">
-			<li class="active"><a href=""> projects </a></li>
-			<li><a href=""> about </a></li>
-			<li><a href=""> play </a></li>
-		</ul>
-	</nav>	
+	<h1 class = "name"> Erin Bruns </h1>
+	<h2 class = "ux"> ux researcher <br><br><br></h2>
+	<p1 class = "pages"> <a href="home.html">PROJECTS</a> / <a href="about.html">ABOUT</a> / <a href= "Resume.pdf" target="_blank">RESUME</a>
 
-	<div class="column">
-		<img class="airbnb" src="airbnbmac.png">
-		<img class="flat" src="fpiphone.png">
-	</div>
+ 	<a href="airbnb.html"><img class = "airbnb" src="home_airbnb.png"></a>
+ 	<a href="habits.html"><img class = "habits" src="habits.png"></a>
+  	<a href="bus.html"><img class = "bus" src="home_bus.png"></a>
+  	<a href="flat.html"><img class = "flat" src="fp_insta.png"></a>
+
+
 
 </body>
 </html>
