lots of updates

--- a/habits.html
+++ b/habits.html
@@ -5,6 +5,64 @@
 	<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  font-family: "Arial:", sans-serif;
+}
+
+.sidenav {
+  height: 100%;
+  width: 18%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: white;
+  overflow-x: hidden;
+  padding-top: 5%;
+  padding-left: 2%; 
+}
+
+.sidenav a {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 1em;
+  color: #818181;
+  display: block;
+}
+
+.sidenav a:hover {
+  color: #75afb3;
+}
+
+.main {
+  margin-left: 160px; /* Same as the width of the sidenav */
+  font-size: 28px; /* Increased text to enable scrolling */
+  padding: 0px 10px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+</style>
+</head>
+<body>
+
+<div class="sidenav">
+	<h1 class = "name"> erin bruns</h1>
+	<h2 class="ux"> U X  &ensp;r e s e a r c h e r <br><br><br><br></h2>
+  <a href="index.html">PROJECTS</a>
+  <a href="airbnb.html">airbnb</a>
+  <a href="bus.html">northwestern research</a>
+  <a href="flat.html">flat&point<br><br></a>
+  
+
+  <a href="about.html">ABOUT</a>
+  <a href="Resume.pdf">RESUME</a>
+</div>
+
 <body> 
 
 
@@ -15,6 +73,8 @@
 		<br> <b>Professor:</b><a href ="http://www.nalshurafa.com/" target="_blank"> Nabil Alshurafa </a> <br> 
 		<b>Outcome:</b> A paper for the CHI 2021 conference.   </p1>
 
+    <img class="first" src="hab.png">
+
 	<h2 class="subtitle"> BACKGROUND</h2>
 
 	<p2 class="information">Obesity is a major concern in the United States with 40%. Registered Nutritionists who work with patients with obesity currently use the 24-hour diet recall to track caloric intake for a day. The 24-hour diet recall is considered the Gold Standard. <br><br>
@@ -23,15 +83,18 @@
 
 	<h2 class="subtitle"> RESEARCH</h2>
 
-	<p2 class="information">During my time at HABits Lab, I annotated about 650 hours of film collected from the 2017 study. By annotating, I was able to collect data on a wide range of items such as: <br>
-		- Items that were seen in the video and not in the 24-hour diet recall <br>
-		- If the participant was eating alone or with others <br>
-		- If the participant was eating at home or out <br>
-		- If the participant was looking at a screen during their meal<br>
-		- If the video data was indecipherable and why <br> <br>
+	<p2 class="information">During my time at HABits Lab, I annotated about 650 hours of film collected from the 2017 study. By annotating, I was able to collect a wide range of data such as: <br> </p2>
+		<ul class = "bullets">
+  			<li>Items that were seen in the video and not in the 24-hour diet recall</li>
+  			<li>If the participant was eating alone or with others</li>
+  			<li>If the participant was eating at home or out</li>
+  			<li>If the participant was looking at a screen during their meal</li>
+  			<li>If the video data was indecipherable and why</li>
+		</ul>
 
 
-	Since the lab was planning on doing a second round of the same study with updated technology in fall of 2019, the lab as a whole wanted to learn from the past study. So we were extremely interested in why video data was indecipherable at times. In total, I labeled 647 meals, with 21% being indecipherable. I analyzed the indecipherable items and broke them down into a high level categorization of why they were indecipherable. </p2>
+
+	<p2 class="information">Since the lab was planning on doing a second round of the same study with updated technology in fall of 2019, the lab as a whole wanted to learn from the past study. So we were extremely interested in why video data was indecipherable at times. In total, I labeled 647 meals, with 21% being indecipherable. I analyzed the indecipherable items and broke them down into a high level categorization of why they were indecipherable. </p2>
 
 	<img class="first" src="waffle.png">
 
@@ -41,7 +104,7 @@
 
 
 	<h2 class="subtitle"> OUTCOME</h2>
-	<p2 class="information">  This research was used in a paper with lead author <a href ="https://www.linkedin.com/in/sougata-sen/" target="_blank">  Sougata Sen</a>. The paper is planned to be submitted as a recommendation paper for the 2021 CHI conference. The entirety of the rough draft can be read <a href ="CHI_paper.pdf" target="_blank"> here. 
+	<p2 class="information">  My research based on the study is being used in a recommendation paper for the 2021 CHI conference with lead author <a href ="https://www.linkedin.com/in/sougata-sen/" target="_blank">  Sougata Sen</a>. As a co-author, I worked on the formation of our arguments, the images and charts, and the literary references. The entirety of the rough draft can be read <a href ="CHI_paper.pdf" target="_blank"> here. 
 	
 
 
