--- a/flat.html
+++ b/flat.html
@@ -5,6 +5,64 @@
 	<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  font-family: "Arial:", sans-serif;
+}
+
+.sidenav {
+  height: 100%;
+  width: 18%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: white;
+  overflow-x: hidden;
+  padding-top: 5%;
+  padding-left: 2%; 
+}
+
+.sidenav a {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 1em;
+  color: #818181;
+  display: block;
+}
+
+.sidenav a:hover {
+  color: #75afb3;
+}
+
+.main {
+  margin-left: 160px; /* Same as the width of the sidenav */
+  font-size: 28px; /* Increased text to enable scrolling */
+  padding: 0px 10px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+</style>
+</head>
+<body>
+
+<div class="sidenav">
+	<h1 class = "name"> erin bruns</h1>
+	<h2 class="ux"> U X  &ensp;r e s e a r c h e r <br><br><br><br></h2>
+  <a href="index.html">PROJECTS</a>
+  <a href="airbnb.html">airbnb</a>
+  <a href="habits.html">habits lab</a>
+  <a href="bus.html">northwestern research<br><br></a>
+  
+
+  <a href="about.html">ABOUT</a>
+  <a href="Resume.pdf">RESUME</a>
+</div>
+
 <body> 
 
 	<h1 class="title"> FLAT&POINT </h1>
