--- a/index.html
+++ b/index.html
@@ -5,18 +5,64 @@
 	<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  font-family: "Arial:", sans-serif;
+}
+
+.sidenav {
+  height: 100%;
+  width: 18%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: white;
+  overflow-x: hidden;
+  padding-top: 5%;
+  padding-left: 2%; 
+}
+
+.sidenav a {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 1em;
+  color: #818181;
+  display: block;
+}
+
+.sidenav a:hover {
+  color: #75afb3;
+}
+
+.main {
+  margin-left: 160px; /* Same as the width of the sidenav */
+  font-size: 28px; /* Increased text to enable scrolling */
+  padding: 0px 10px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+</style>
+</head>
+<body>
+
+<div class="sidenav">
+	<h1 class = "name"> erin bruns</h1>
+	<h2 class="ux"> U X  &ensp;r e s e a r c h e r <br><br><br><br></h2>
+  <a href="index.html">PROJECTS</a>
+  <a href="about.html">ABOUT</a>
+  <a href="Resume.pdf">RESUME</a>
+</div>
+
 <body> 
-
-	<h1 class = "name"> Erin Bruns </h1>
-	<h2 class = "ux"> ux researcher <br><br><br></h2>
-	<p1 class = "pages"> <a href="home.html">PROJECTS</a> / <a href="about.html">ABOUT</a> / <a href= "Resume.pdf" target="_blank">RESUME</a>
-
  	<a href="airbnb.html"><img class = "airbnb" src="home_airbnb.png"></a>
  	<a href="habits.html"><img class = "habits" src="habits.png"></a>
   	<a href="bus.html"><img class = "bus" src="home_bus.png"></a>
   	<a href="flat.html"><img class = "flat" src="fp_insta.png"></a>
-
-
 
 </body>
 </html>
