--- a/bus.html
+++ b/bus.html
@@ -55,7 +55,7 @@ body {
 	<h2 class="ux"> U X  &ensp;r e s e a r c h e r <br><br><br><br></h2>
   <a href="index.html">PROJECTS</a>
   <a href="airbnb.html">airbnb</a>
-  <a href="bus.html">habits lab</a>
+  <a href="habits.html">habits lab</a>
   <a href="flat.html">flat&point<br><br></a>
 
   <a href="about.html">ABOUT</a>
