--- a/habits.html
+++ b/habits.html
@@ -60,7 +60,7 @@ body {
   
 
   <a href="about.html">ABOUT</a>
-  <a href="Resume.pdf" target="blank">RESUME</a>
+  <a href="resume.pdf" target="blank">RESUME</a>
 </div>
 
 <body> 
