resume is fixed now

--- a/airbnb.html
+++ b/airbnb.html
@@ -59,7 +59,7 @@ body {
   <a href="flat.html">flat&point<br><br></a>
 
   <a href="about.html">ABOUT</a>
-  <a href="Resume.pdf">RESUME</a>
+  <a href ="resume.pdf" target="_blank"/>RESUME</a>
 </div>
 
 <body> 
