--- a/flat.html
+++ b/flat.html
@@ -60,7 +60,7 @@ body {
   
 
   <a href="about.html">ABOUT</a>
-  <a href="Resume.pdf">RESUME</a>
+  <a href ="resume.pdf" target="_blank"/>RESUME</a>
 </div>
 
 <body> 
