--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ body {
 	<h2 class="ux"> U X  &ensp;r e s e a r c h e r <br><br><br><br></h2>
   <a href="index.html">PROJECTS</a>
   <a href="about.html">ABOUT</a>
-  <a href="Resume.pdf">RESUME</a>
+  <a href = resume.pdf target="_blank"/>RESUME</a>
 </div>
 
 <body> 
