--- a/habits.html
+++ b/habits.html
@@ -77,7 +77,7 @@ body {
 
 	<h2 class="subtitle"> BACKGROUND</h2>
 
-	<p2 class="information">Obesity is a major concern in the United States with 40%. Registered Nutritionists who work with patients with obesity currently use the 24-hour diet recall to track caloric intake for a day. The 24-hour diet recall is considered the Gold Standard. <br><br>
+	<p2 class="information">Obesity is a major concern in the United States that effects 40% of our population. Registered Nutritionists who work with patients with obesity currently use the 24-hour diet recall to track caloric intake for a day. The 24-hour diet recall is considered the Gold Standard. <br><br>
 
 	At HABits Lab, we work on wearable mHealth (mobile health). In 2017, HABits Lab conducted a study with 17 participants of varying age, weight, and gender. For three weeks, users were asked to wear a camera located on their non-dominant shoulder in order to capture food consumption. Participants also completed the 24-hour recall with a dietitian. </p2>
 
