--- a/bus.html
+++ b/bus.html
@@ -51,14 +51,13 @@ body {
 <body>
 
 <div class="sidenav">
-	<h1 class = "name"> erin bruns</h1>
-	<h2 class="ux"> U X  &ensp;r e s e a r c h e r <br><br><br><br></h2>
-  <a href="index.html">PROJECTS</a>
+	<h1 href="index.html" class = "name"> erin bruns</h1>
+	<h2 href="index.html" class="ux"> U X  &ensp;r e s e a r c h e r <br><br><br><br></h2>
+  <a href="index.html">ABOUT</a>
+  <a href="projects.html">PROJECTS</a>
   <a href="airbnb.html">airbnb</a>
   <a href="habits.html">habits lab</a>
   <a href="flat.html">flat&point<br><br></a>
-
-  <a href="about.html">ABOUT</a>
   <a href ="resume.pdf" target="_blank"/>RESUME</a>
 </div>
 
