--- a/index.html
+++ b/index.html
@@ -51,18 +51,25 @@ body {
 <body>
 
 <div class="sidenav">
-	<h1 class = "name"> erin bruns</h1>
-	<h2 class="ux"> U X  &ensp;r e s e a r c h e r <br><br><br><br></h2>
-  <a href="index.html">PROJECTS</a>
-  <a href="about.html">ABOUT</a>
-  <a href = resume.pdf target="_blank"/>RESUME</a>
+	<h1 href="index.html"class = "name"> erin bruns</h1>
+	<h2 href="index.html"class="ux"> U X  &ensp;r e s e a r c h e r <br><br><br><br></h2>
+  <a href="index.html">ABOUT</a>
+  <a href="projects.html">PROJECTS</a>
+  <a href = "resume.pdf" target="_blank"/>RESUME</a>
 </div>
 
 <body> 
- 	<a href="airbnb.html"><img class = "airbnb" src="home_airbnb.png"></a>
- 	<a href="habits.html"><img class = "habits" src="habits.png"></a>
-  	<a href="bus.html"><img class = "bus" src="home_bus.png"></a>
-  	<a href="flat.html"><img class = "flat" src="fp_insta.png"></a>
+
+	<img class="me" src="me.png">
+
+	<h1 class="erin">hi, i'm erin</h1><br>
+	<h2 class= "insta"> <-- AND THIS IS MY MOST LIKED PHOTO ON INSTAGRAM<br><br></h2>
+	<h2 class="about">I'm a senior at Northwestern University studying Human-Computer Interaction. Although HCI is not a major at Northwestern yet, I was empowered to create the major through the McCormick Integrated Engineering Study program (aka built your own major). My major is outlined <a href ="HCI_major.pdf" target="_blank">here</a>!<br> <br> I am passionate about a lot of things such as the environment, feminism, and great design. My big goal in life is to run my own research lab that analyzes biases in technology towards females. But for now, I want to get really good at UX Research. <br> <br> In my free time I like to do one of two things depending on my mood: sit in my bed and watch reruns of Gilmore Girls or be consumed into a new personal project such as building furniture or drawing.<br> <br> 
+
+	I am currently searching for full-time UX Research positions starting in June 2020. I can be contacted on <a href = https://www.linkedin.com/in/erin-bruns-69456174 target="_blank"/>LinkedIn</a> or at erinbruns2020@u.northwestern.edu  </h2>
+
+
+
 
 </body>
 </html>
