--- a/flat.html
+++ b/flat.html
@@ -68,7 +68,7 @@ body {
 
 	<p1 class="background-info"> <b> Role:</b> Graphic Design <br> <b>When:</b> October 2019 <br> <b>Outcome:</b> A set of templates for Instagram Stories.  </p1>
 
-	<img class="first" src="fpslidedeck.png">
+	<img class="first" src="fp_insta_2.png">
 
 	<h2 class="subtitle"> PROBLEM</h2>
 
