--- a/habits.html
+++ b/habits.html
@@ -51,8 +51,8 @@ body {
 <body>
 
 <div class="sidenav">
-	<h1 href="index.html" class = "name"> erin bruns</h1>
-	<h2 href="index.html" class="ux"> U X  &ensp;r e s e a r c h e r <br><br><br><br></h2>
+	<a href="index.html" class = "name"><h1> erin bruns</h1>
+  <h2 class="ux">U X  &ensp;r e s e a r c h e r <br><br><br><br></h2>
 
   <a href="index.html">ABOUT</a>
   <a href="projects.html">PROJECTS</a>
