--- a/bus.html
+++ b/bus.html
@@ -56,6 +56,7 @@ body {
   <a href="index.html">ABOUT</a>
   <a href="projects.html">PROJECTS</a>
   <a href="airbnb.html">airbnb</a>
+  <a href="nuvotes.html">nuvotes</a>
   <a href="habits.html">habits lab</a>
   <a href="flat.html">flat&point<br><br></a>
   <a href ="resume.pdf" target="_blank"/>RESUME</a>
