--- a/projects.html
+++ b/projects.html
@@ -60,6 +60,7 @@ body {
 
 <body> 
  	<a href="airbnb.html"><img class = "airbnb" src="home_airbnb.png"></a>
+  <a href="nuvotes.html"><img class = "nuvotes" src="NUVotes.png"></a>
  	<a href="habits.html"><img class = "habits" src="habits.png"></a>
   	<a href="bus.html"><img class = "bus" src="home_bus.png"></a>
   	<a href="flat.html"><img class = "flat" src="fp_insta.png"></a>
