--- a/airbnb.html
+++ b/airbnb.html
@@ -55,6 +55,7 @@ body {
 	<h2 class="ux">U X  &ensp;r e s e a r c h e r <br><br><br><br></h2>
   <a href="index.html">ABOUT</a>
   <a href="projects.html">PROJECTS</a>
+  <a href="nuvotes.html">nuvotes</a>
   <a href="habits.html">habits lab</a>
   <a href="bus.html">northwestern research</a>
   <a href="flat.html">flat&point<br><br></a>
