--- a/flat.html
+++ b/flat.html
@@ -56,6 +56,7 @@ body {
   <a href="index.html">ABOUT</a>
   <a href="projects.html">PROJECTS</a>
   <a href="airbnb.html">airbnb</a>
+  <a href="nuvotes.html">nuvotes</a>
   <a href="habits.html">habits lab</a>
   <a href="bus.html">northwestern research<br><br></a>
 
