--- a/habits.html
+++ b/habits.html
@@ -57,6 +57,7 @@ body {
   <a href="index.html">ABOUT</a>
   <a href="projects.html">PROJECTS</a>
   <a href="airbnb.html">airbnb</a>
+  <a href="nuvotes.html">nuvotes</a>
   <a href="bus.html">northwestern research</a>
   <a href="flat.html">flat&point<br><br></a>
   <a href="resume.pdf" target="blank">RESUME</a>
