--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@ body {
 
 	<h1 class="erin">hi, i'm erin</h1><br>
 	<h2 class= "insta"> <-- AND THIS IS MY MOST LIKED PHOTO ON INSTAGRAM<br><br></h2>
-	<h2 class="about">I'm a senior at Northwestern University studying Human-Computer Interaction. Although HCI is not a major at Northwestern yet, I was empowered to create the major through the McCormick Integrated Engineering Study program (aka built your own major). My major is outlined <a href ="HCI_major.pdf" target="_blank">here</a>!<br> <br> I am passionate about a lot of things such as the environment, feminism, and great design. My big goal in life is to run my own research lab that analyzes biases in technology towards females. But for now, I want to get really good at UX Research. <br> <br> In my free time I like to do one of two things depending on my mood: sit in my bed and watch reruns of Gilmore Girls or be consumed into a new personal project such as building furniture or drawing.<br> <br> 
+	<h2 class="about">I am Solutions Architect at <a href = https://fjorgedigital.com/ target="_blank"/>fjorge</a>. I majored in Human Computer at Northwestern University through the McCormick Integrated Engineering Study program (aka built your own major). My major is outlined <a href ="HCI_major.pdf" target="_blank">here</a>!<br> <br> I am passionate about a lot of things such as the environment, equity, and great design. My big goal in life is to run my own research lab that analyzes biases in technology towards minorty populations. But for now, I want to get really good at research. <br> <br> In my free time I like to do one of two things depending on my mood: sit in my bed and watch reruns of Gilmore Girls or be consumed into a new personal project such as building furniture or drawing.<br> <br> 
 
-	I am currently searching for full-time UX Research positions starting in June 2020. <br><br>
+	I am always working to advance my research skillset. <br><br>
   Contact Me! <br>
    <a href = https://www.linkedin.com/in/erin-bruns-69456174 target="_blank"/>LinkedIn</a> <br>erinbruns2020@u.northwestern.edu  </h2>
 
